# canyontest

./: .gitignore  Cargo.toml  DOCS.md  Dockerfile  README.md  commit.sh  docker-compose.yml  multiply.js  package.json  pnpm-lock.yaml  sum.js  vercel.json
.github/workflows/: ci.yml  docker-build-push.yml  publish.yml
apps/backend/: go.mod  go.sum  main.go
apps/backend/config/: database.go
apps/backend/handlers/: auth.go  gitea.go
apps/backend/middleware/: auth.go
apps/backend/models/: gitea.go  user.go
apps/backend/services/: gitea.go
apps/frontend/: package.json
apps/frontend/src/: App.tsx
apps/frontend/src/components/CodeViewer/: CodeViewer.css  CodeViewer.tsx
apps/frontend/src/components/Layout/: MainLayout.tsx
apps/frontend/src/components/UserSettings/: UserSettings.tsx
apps/frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx
apps/frontend/src/i18n/: index.ts
apps/frontend/src/i18n/locales/: en-US.json  zh-CN.json
apps/frontend/src/pages/CodeBrowser/: CodeBrowser.tsx
apps/frontend/src/pages/Dashboard/: Dashboard.tsx
apps/frontend/src/pages/Login/: Login.css  Login.tsx
apps/frontend/src/pages/OAuthCallback/: OAuthCallback.tsx
apps/frontend/src/pages/Settings/: Settings.tsx
apps/frontend/src/pages/Users/: Users.tsx
apps/frontend/src/services/: api.ts  gitea.ts
src/: lib.rs
